# emergentintensity

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: Q_table.inp  taumax0_01_mu3200_I_emergent.inp  taumax0_01_mu3200_Q_emergent.inp  taumax0_03_mu800_I_emergent.inp  taumax0_03_mu800_Q_emergent.inp  taumax0_05_mu800_I_emergent.inp  taumax0_05_mu800_Q_emergent.inp  taumax0_1_mu400_I_emergent.inp  taumax0_1_mu400_Q_emergent.inp  taumax0_2_mu400_I_emergent.inp  taumax0_2_mu400_Q_emergent.inp  taumax0_3_mu400_I_emergent.inp  taumax0_3_mu400_Q_emergent.inp  taumax0_4_mu400_I_emergent.inp  taumax0_4_mu400_Q_emergent.inp  taumax0_5_mu100_I_emergent.inp  taumax0_5_mu100_Q_emergent.inp  taumax0_6_mu100_I_emergent.inp  taumax0_6_mu100_Q_emergent.inp  taumax0_7_mu100_I_emergent.inp  taumax0_7_mu100_Q_emergent.inp  taumax0_8_mu100_I_emergent.inp  taumax0_8_mu100_Q_emergent.inp  taumax0_9_mu100_I_emergent.inp  taumax0_9_mu100_Q_emergent.inp  taumax10_mu100_I_emergent.inp  taumax10_mu100_Q_emergent.inp  taumax12_mu100_I_emergent.inp  taumax12_mu100_Q_emergent.inp  taumax15_mu100_I_emergent.inp  taumax15_mu100_Q_emergent.inp  taumax1_2_mu100_I_emergent.inp  taumax1_2_mu100_Q_emergent.inp  taumax1_4_mu100_I_emergent.inp  taumax1_4_mu100_Q_emergent.inp  taumax1_6_mu100_I_emergent.inp  taumax1_6_mu100_Q_emergent.inp  taumax1_8_mu100_I_emergent.inp  taumax1_8_mu100_Q_emergent.inp  taumax1_mu100_I_emergent.inp  (+11 more)
notebooks/: exampleusage.ipynb  pf_fitting_example.ipynb  plot_derivative.ipynb  plot_emergent_intensity.ipynb  plot_fig11-14.ipynb  plot_fig3.ipynb  (+5 more)
(+480 files in other folders)
