[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emergentintensity"
version = "0.1.0"
description = "Compute emergent Stokes I and Q from a plane-parallel slab using precomputed radiative-transfer tables."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Naoya Kitade", email = "naoya.kitade.astro@gmail.com"},
  {name = "Akimasa Kataoka"},
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "lmfit",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["emergentintensity", "pf_fitting", "stokes_i_fitting"]
